// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`has billable hours 1`] = `
<div>
  <div
    class="LinearBuffer-root css-gxlbxf"
  >
    <div
      class="MuiBox-root css-70qvj9"
    >
      <div
        class="MuiBox-root css-1bhivts"
      >
        <span
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="65"
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-buffer css-16miog8-MuiLinearProgress-root"
          role="progressbar"
        >
          <span
            class="MuiLinearProgress-dashed MuiLinearProgress-dashedColorPrimary css-z7k20-MuiLinearProgress-dashed"
          />
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Buffer css-1igjkhl-MuiLinearProgress-bar1"
            style="transform: translateX(-35.13513513513513%);"
          />
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-bar2 MuiLinearProgress-colorPrimary MuiLinearProgress-bar2Buffer css-1v1662g-MuiLinearProgress-bar2"
            style="transform: translateX(-18.91891891891892%);"
          />
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 MuiTypography-alignRight css-13mdizf-MuiTypography-root"
      style="--Typography-textAlign: right; display: block;"
    >
      Billable Hours: 
      1200
       - Contribution Hours:
       
      1500
       - Target Hours: 
      1850
       - PTO Hours:
       
       
      0
       - Billable Utilization:
       
       
      (none)
       - Overtime Worked:
       
       
      (none)
    </p>
  </div>
</div>
`;

exports[`has no billable hours 1`] = `
<div>
  <div
    class="LinearBuffer-root css-gxlbxf"
  >
    <div
      class="MuiBox-root css-70qvj9"
    >
      <div
        class="MuiBox-root css-1bhivts"
      >
        <span
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="81"
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1txyin7-MuiLinearProgress-root"
          role="progressbar"
        >
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
            style="transform: translateX(-18.91891891891892%);"
          />
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 MuiTypography-alignRight css-13mdizf-MuiTypography-root"
      style="--Typography-textAlign: right; display: block;"
    >
      Billable Hours: 
      0
       - Contribution Hours:
       
      1500
       - Target Hours: 
      1850
       - PTO Hours:
       
       
      0
       - Billable Utilization:
       
       
      (none)
       - Overtime Worked:
       
       
      (none)
    </p>
  </div>
</div>
`;
